--- a/examples/node/package.json
+++ b/examples/node/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.536.0",
     "@google-cloud/storage": "^7.9.0",
-    "elevenlabs": "^0.2.0"
+    "elevenlabs": "^0.2.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/ws": "^8.5.10",
     "dotenv": "^16.4.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1",
