--- a/examples/twilio/call-llm/package.json
+++ b/examples/twilio/call-llm/package.json
@@ -1,35 +1,43 @@
 {
   "name": "elevenlabs-twilio-call-llm",
-  "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "inbound": "node ./scripts/inbound-call.js",
-    "outbound": "node ./scripts/outbound-call.js",
-    "test": "jest",
-    "ngrok": "ngrok http 5000",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "dev": "tsx watch src/index.ts",
+    "start": "node dist/index.js",
+    "build": "npm-run-all clean lint build:app",
+    "build:app": "tsup src/index.ts",
+    "clean": "rimraf dist",
+    "lint": "tsc",
+    "ngrok": "ngrok http 5000"
   },
-  "keywords": [
-    "elevenlabs"
-  ],
-  "author": "ElevenLabs",
-  "license": "MIT",
   "dependencies": {
     "@deepgram/sdk": "^2.4.0",
     "colors": "^1.4.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "express-ws": "^5.0.2",
-    "node-fetch": "^2.7.0",
-    "openai": "^4.20.1",
-    "twilio": "^4.23.0",
-    "uuid": "^9.0.1",
-    "wavefile": "^11.0.0"
+    "node-fetch": "^3.3.2",
+    "openai": "^4.29.2",
+    "twilio": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.4.11",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
-  }
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-ws": "^3.0.4",
+    "@types/node": "^20.11.30",
+    "@types/node-fetch": "^2.6.11",
+    "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10",
+    "dotenv": "^16.4.5",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.5",
+    "tsup": "^8.0.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.2"
+  },
+  "author": "ElevenLabs",
+  "license": "MIT",
+  "keywords": [
+    "elevenlabs"
+  ]
 }
