--- a/examples/twilio/call-llm/package.json
+++ b/examples/twilio/call-llm/package.json
@@ -11,14 +11,14 @@
     "ngrok": "ngrok http 5000"
   },
   "dependencies": {
-    "@deepgram/sdk": "^2.4.0",
     "colors": "^1.4.0",
     "express": "^4.18.3",
     "express-ws": "^5.0.2",
     "node-fetch": "^3.3.2",
     "openai": "^4.29.2",
     "twilio": "^5.0.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
