--- a/examples/twilio/call-llm/package.json
+++ b/examples/twilio/call-llm/package.json
@@ -11,21 +11,20 @@
     "ngrok": "ngrok http 5000"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "colors": "^1.4.0",
+    "elevenlabs-alpha": "^0.0.4",
     "express": "^4.18.3",
     "express-ws": "^5.0.2",
-    "node-fetch": "^3.3.2",
     "openai": "^4.29.2",
     "twilio": "^5.0.1",
-    "uuid": "^9.0.1",
-    "ws": "^8.16.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-ws": "^3.0.4",
     "@types/node": "^20.11.30",
-    "@types/node-fetch": "^2.6.11",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
     "dotenv": "^16.4.5",
