Added elevenlabs alpha

--- a/examples/websockets/clients/next/package.json
+++ b/examples/websockets/clients/next/package.json
@@ -5,10 +5,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "ngrok": "ngrok http --region=eu --hostname=local.contential.ai 3000"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@elevenlabs-alpha/react": "^0.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
