--- a/examples/websockets/servers/node/package.json
+++ b/examples/websockets/servers/node/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "elevenlabs": "^0.2.0",
+    "elevenlabs-alpha": "^0.0.7",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "helmet": "^7.0.0",
     "socket.io": "^4.7.5",
     "ws": "^8.16.0"
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
+    "@types/express-ws": "^3.0.4",
     "@types/node": "^20.11.17",
     "@types/ws": "^8.5.10",
     "npm-run-all": "^4.1.5",
