--- a/examples/twilio/call/package.json
+++ b/examples/twilio/call/package.json
@@ -1,18 +1,17 @@
 {
   "name": "elevenlabs-twilio-call",
-  "main": "dist/index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
+    "dev": "tsx watch src/app.ts",
+    "start": "node dist/app.js",
     "build": "npm-run-all clean lint build:app",
-    "build:app": "tsup src/index.ts",
+    "build:app": "tsup src/app.ts",
     "clean": "rimraf dist",
     "lint": "tsc",
     "ngrok": "ngrok http 5000"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "colors": "^1.4.0",
+    "elevenlabs": "^0.2.2",
     "express": "^4.18.3",
     "express-ws": "^5.0.2",
     "twilio": "^5.0.1",
