--- a/examples/twilio/call/package.json
+++ b/examples/twilio/call/package.json
@@ -14,15 +14,12 @@
     "elevenlabs": "^0.2.2",
     "express": "^4.18.3",
     "express-ws": "^5.0.2",
-    "twilio": "^5.0.1",
-    "uuid": "^9.0.1"
+    "twilio": "^5.0.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-ws": "^3.0.4",
     "@types/node": "^20.11.30",
-    "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
     "dotenv": "^16.4.5",
     "npm-run-all": "^4.1.5",
