Python text to speech example including streaming and s3 signed links (#2)
* feat: Add Python example for text2speech

* fix: structure, sdk, env, etc

* fix: several issues

* fix: remove bucket_name from arguments

* move and fix

* update ignore

* finishing touches

---------

Co-authored-by: Luke Harries <lharries@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ dist
 tmp
 /out-tsc
 
+# Python files
+Pipfile
+__pycache__
+
+
 # dependencies
 node_modules
 
@@ -41,6 +46,7 @@ Thumbs.db
 # env
 .env*
 !.env.example
+venv
 
 # formatters
 .ruff_cache
