--- a/examples/text-to-speech/node/package.json
+++ b/examples/text-to-speech/node/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.536.0",
+    "@aws-sdk/s3-request-presigner": "^3.556.0",
     "@google-cloud/storage": "^7.9.0",
     "elevenlabs": "^0.2.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
     "dotenv": "^16.4.5",
     "npm-run-all": "^4.1.5",
