--- a/examples/text-to-speech/node/package.json
+++ b/examples/text-to-speech/node/package.json
@@ -1,19 +1,13 @@
 {
   "name": "node",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "npm-run-all clean lint build:app",
-    "build:app": "tsup src/index.ts",
-    "clean": "rimraf dist",
-    "start": "node dist/index.js",
-    "lint": "tsc"
+    "start": "ts-node src/index.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.536.0",
     "@aws-sdk/s3-request-presigner": "^3.556.0",
     "@google-cloud/storage": "^7.9.0",
-    "elevenlabs": "^0.2.0",
-    "ws": "^8.16.0"
+    "elevenlabs": "^0.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
