--- a/examples/websockets/clients/alpha/next/package.json
+++ b/examples/websockets/clients/alpha/next/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@elevenlabs-alpha/react": "^0.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
