--- a/examples/websockets/servers/alpha/node/package.json
+++ b/examples/websockets/servers/alpha/node/package.json
@@ -6,11 +6,13 @@
     "build:app": "tsup src/index.ts",
     "clean": "rimraf dist",
     "start": "node dist/index.js",
-    "latency": "tsx src/latency.ts",
     "lint": "tsc"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "elevenlabs-alpha": "^0.0.7",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "helmet": "^7.0.0",
@@ -22,9 +24,7 @@
     "@types/express-ws": "^3.0.4",
     "@types/node": "^20.11.17",
     "@types/ws": "^8.5.10",
-    "dotenv": "^16.4.5",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
     "rimraf": "^5.0.1",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
