--- a/examples/text-to-speech-websockets/measure-latency/package.json
+++ b/examples/text-to-speech-websockets/measure-latency/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elevenlabs-websockets-server-node",
+  "name": "elevenlabs-websockets-measure-latency",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "npm-run-all clean lint build:app",
@@ -9,22 +9,14 @@
     "lint": "tsc"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "elevenlabs-alpha": "^0.0.7",
-    "express": "^4.18.2",
-    "express-ws": "^5.0.2",
-    "helmet": "^7.0.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.21",
-    "@types/express-ws": "^3.0.4",
     "@types/node": "^20.11.17",
     "@types/ws": "^8.5.10",
+    "dotenv": "^16.4.5",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.1",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
