--- a/examples/text-to-speech-websockets/nextjs/package.json
+++ b/examples/text-to-speech-websockets/nextjs/package.json
@@ -18,6 +18,7 @@
     "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
