update video player

--- a/examples/elevenvideos/frontend/package.json
+++ b/examples/elevenvideos/frontend/package.json
@@ -15,22 +15,25 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "framer-motion": "^11.1.9",
+    "howler": "^2.2.4",
     "lucide-react": "^0.244.0",
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
-    "react-player": "^2.16.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.23.6"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.11",
     "@types/node": "^20.8.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
