--- a/examples/dubbing/e2e-example/frontend/package.json
+++ b/examples/dubbing/e2e-example/frontend/package.json
@@ -10,14 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.16.5",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.6.0",
+    "classnames": "^2.5.1",
     "clsx": "^1.2.1",
+    "framer-motion": "^11.1.9",
+    "howler": "^2.2.4",
     "lucide-react": "^0.244.0",
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
@@ -28,6 +35,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.0",
     "tailwindcss-animate": "^1.0.6",
+    "three": "^0.164.1",
     "zod": "^3.23.6"
   },
   "devDependencies": {
@@ -43,6 +51,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
     "prettier-plugin-tailwindcss": "0.2.5",
+    "sass": "^1.77.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
