--- a/examples/sound-effects/video-to-sfx/package.json
+++ b/examples/sound-effects/video-to-sfx/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "openai": "^4.51.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
