--- a/examples/sound-effects/video-to-sfx/package.json
+++ b/examples/sound-effects/video-to-sfx/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.45.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -55,6 +56,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.0",
     "react-resizable-panels": "^2.0.19",
+    "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
