--- a/examples/sound-effects/video-to-sfx/package.json
+++ b/examples/sound-effects/video-to-sfx/package.json
@@ -47,6 +47,7 @@
     "input-otp": "^1.2.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
+    "mobx": "^6.12.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "openai": "^4.51.0",
@@ -71,6 +72,7 @@
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tone": "^15.0.4",
     "typescript": "^5"
   }
 }
