--- a/examples/sound-effects/video-to-sfx/package.json
+++ b/examples/sound-effects/video-to-sfx/package.json
@@ -50,6 +50,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
     "mobx": "^6.12.4",
+    "mobx-react": "^9.1.1",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "openai": "^4.51.0",
