--- a/examples/text-to-voice/x-to-voice/package.json
+++ b/examples/text-to-voice/x-to-voice/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "apify-client": "^2.9.7",
     "class-variance-authority": "^0.7.0",
@@ -18,8 +20,11 @@
     "lucide-react": "^0.453.0",
     "next": "15.0.0",
     "next-safe-action": "^7.8.1",
+    "next-themes": "^0.3.0",
+    "qrcode.react": "^4.1.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "twitter-api-v2": "^1.18.0",
