--- a/examples/text-to-voice/x-to-voice/package.json
+++ b/examples/text-to-voice/x-to-voice/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
+    "@vercel/blob": "^0.25.1",
     "apify-client": "^2.9.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
