--- a/examples/text-to-voice/x-to-voice/package.json
+++ b/examples/text-to-voice/x-to-voice/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.25.1",
     "apify-client": "^2.9.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "next": "15.0.0",
     "next-safe-action": "^7.8.1",
