--- a/examples/text-to-voice/x-to-voice/package.json
+++ b/examples/text-to-voice/x-to-voice/package.json
@@ -19,6 +19,7 @@
     "@upstash/redis": "^1.34.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.25.1",
+    "@vercel/speed-insights": "^1.0.14",
     "apify-client": "^2.9.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
