--- a/examples/conversational-ai/package.json
+++ b/examples/conversational-ai/package.json
@@ -6,7 +6,8 @@
     "start:backend": "node backend/server.js",
     "build": "webpack --mode production",
     "dev": "concurrently \"npm run start:backend\" \"webpack serve --mode development\"",
-    "start": "npm run build && npm run start:backend"
+    "start": "npm run build && npm run start:backend",
+    "start:python": "npm run build && uvicorn backend.server:app --reload --port 3000"
   },
   "dependencies": {
     "@11labs/client": "latest",
