--- a/examples/conversational-ai/talk-to-santa/package.json
+++ b/examples/conversational-ai/talk-to-santa/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@11labs/react": "^0.0.4",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.103.0",
     "@react-three/fiber": "9.0.0-alpha.8",
@@ -24,7 +25,8 @@
     "react-snowfall": "^2.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.160.0"
+    "three": "^0.160.0",
+    "vaul": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
