--- a/examples/conversational-ai/talk-to-santa/package.json
+++ b/examples/conversational-ai/talk-to-santa/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@react-three/drei": "^9.103.0",
     "@react-three/fiber": "9.0.0-alpha.8",
+    "@supabase/supabase-js": "^2.46.2",
     "@vercel/analytics": "^1.4.1",
     "@vercel/blob": "^0.26.0",
     "class-variance-authority": "^0.7.1",
@@ -27,9 +28,11 @@
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "next-safe-action": "^7.9.9",
+    "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-snowfall": "^2.2.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.160.0",
