--- a/examples/conversational-ai/talk-to-santa/package.json
+++ b/examples/conversational-ai/talk-to-santa/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.46.2",
     "@vercel/analytics": "^1.4.1",
     "@vercel/blob": "^0.26.0",
+    "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "elevenlabs": "^0.18.1",
