--- a/examples/conversational-ai/talk-to-santa/package.json
+++ b/examples/conversational-ai/talk-to-santa/package.json
@@ -12,6 +12,7 @@
     "@11labs/react": "^0.0.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
