chore: add readme to santa project

--- a/examples/conversational-ai/talk-to-santa/.gitignore
+++ b/examples/conversational-ai/talk-to-santa/.gitignore
@@ -30,11 +30,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # env files (can opt-in for committing if needed)
-.env*
-
+.env
+.env.local
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.env*.local
