--- a/examples/conversational-ai/twilio/javascript/package.json
+++ b/examples/conversational-ai/twilio/javascript/package.json
@@ -14,6 +14,7 @@
     "@fastify/websocket": "^11.0.1",
     "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
+    "twilio": "^5.4.4",
     "ws": "^8.18.0"
   }
 }
