--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/app.json
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/app.json
@@ -13,11 +13,11 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.elevenlabs-conversational-ai-expo-react-native",
       "infoPlist": {
         "NSMicrophoneUsageDescription": "This app uses the microphone to record audio."
-      }
+      },
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.elevenlabs-conversational-ai-expo-react-native"
     },
     "android": {
       "adaptiveIcon": {
