--- a/examples/text-to-speech/node/package.json
+++ b/examples/text-to-speech/node/package.json
@@ -7,7 +7,7 @@
     "@aws-sdk/client-s3": "^3.536.0",
     "@aws-sdk/s3-request-presigner": "^3.556.0",
     "@google-cloud/storage": "^7.9.0",
-    "elevenlabs": "^0.2.0"
+    "elevenlabs": "^1.51.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1",
+    "ts-node": "^10.9.2",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
     "typescript": "^5.4.2"
