--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/android/app/src/main/AndroidManifest.xml
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
+        <data android:scheme="elevenlabs"/>
         <data android:scheme="com.anonymous.elevenlabsconversationalaiexporeactnative"/>
+        <data android:scheme="exp+elevenlabs-conversational-ai-expo-react-native"/>
       </intent-filter>
     </activity>
   </application>
