--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/ios/elevenlabsconversationalaiexporeactnative/Info.plist
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/ios/elevenlabsconversationalaiexporeactnative/Info.plist
@@ -27,7 +27,14 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
+          <string>elevenlabs</string>
           <string>com.anonymous.elevenlabs-conversational-ai-expo-react-native</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+elevenlabs-conversational-ai-expo-react-native</string>
         </array>
       </dict>
     </array>
