--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
@@ -9,17 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@11labs/react": "^0.0.6",
-    "@expo/metro-runtime": "~4.0.1",
-    "expo": "~52.0.30",
+    "@11labs/react": "^0.0.7",
+    "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
+    "react-native": "0.76.7",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-audio": "~0.3.4",
-    "expo-dev-client": "~5.0.12"
+    "@expo/metro-runtime": "~4.0.1",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
