--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/app.json
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/app.json
@@ -24,7 +24,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.elevenlabsconversationalaiexporeactnative"
     },
     "web": {
       "favicon": "./assets/favicon.png"
