yay: working state.

--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/android/app/src/main/AndroidManifest.xml
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="elevenlabs"/>
         <data android:scheme="com.anonymous.elevenlabsconversationalaiexporeactnative"/>
+        <data android:scheme="exp+elevenlabs-conversational-ai-expo-react-native"/>
       </intent-filter>
     </activity>
   </application>
