--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/ios/elevenlabsconversationalaiexporeactnative/Info.plist
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/ios/elevenlabsconversationalaiexporeactnative/Info.plist
@@ -31,6 +31,12 @@
           <string>com.anonymous.elevenlabs-conversational-ai-expo-react-native</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+elevenlabs-conversational-ai-expo-react-native</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
