--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
@@ -18,7 +18,8 @@
     "react-native-web": "~0.19.13",
     "@expo/metro-runtime": "~4.0.1",
     "react-native-webview": "13.12.5",
-    "expo-dev-client": "~5.0.12"
+    "expo-dev-client": "~5.0.12",
+    "expo-battery": "~9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
