--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@11labs/react": "^0.0.7",
-    "expo": "~52.0.37",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
-    "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~4.0.1",
-    "react-native-webview": "13.12.5",
-    "expo-dev-client": "~5.0.12",
+    "expo": "~52.0.37",
     "expo-battery": "~9.0.2",
-    "expo-brightness": "~13.0.3"
+    "expo-brightness": "~13.0.3",
+    "expo-dev-client": "~5.0.12",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.479.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
