chore: remove native folders.

--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/.gitignore
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/.gitignore
@@ -34,3 +34,9 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# android - don't track as it's a demo app
+android/*
+
+#ios - don't track as it's a demo app
+ios/*
