--- a/examples/conversational-ai/nextjs/.env.example
+++ b/examples/conversational-ai/nextjs/.env.example
@@ -1,5 +1,5 @@
-# ElevenLabs Agent ID
+# ElevenLabs Conversational AI Agent ID
 AGENT_ID=""
 
 # ElevenLabs API Key
-XI_API_KEY=""
+ELEVENLABS_API_KEY=""
