--- a/examples/conversational-ai/nextjs/package.json
+++ b/examples/conversational-ai/nextjs/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@11labs/client": "latest",
+    "@11labs/react": "^0.0.8",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "elevenlabs": "^1.54.0",
     "express": "^4.21.1",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
