--- a/examples/conversational-ai/nextjs-post-call-webhook/package.json
+++ b/examples/conversational-ai/nextjs-post-call-webhook/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@upstash/redis": "^1.34.6",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
