--- a/examples/conversational-ai/nextjs-post-call-webhook/package.json
+++ b/examples/conversational-ai/nextjs-post-call-webhook/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-email/components": "^0.0.34",
     "@upstash/redis": "^1.34.6",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
