--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/app.json
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/app.json
@@ -21,6 +21,10 @@
       "bundleIdentifier": "com.anonymous.elevenlabs-conversational-ai-expo-react-native"
     },
     "android": {
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
