--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@11labs/react": "^0.0.7",
+    "@elevenlabs/react": "^0.0.7",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~4.0.1",
     "expo": "~52.0.37",
