--- a/examples/text-to-speech/node/package.json
+++ b/examples/text-to-speech/node/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.536.0",
     "@aws-sdk/s3-request-presigner": "^3.556.0",
-    "@google-cloud/storage": "^7.9.0",
-    "elevenlabs": "^1.51.0"
+    "@elevenlabs/elevenlabs-js": "^2.1.0",
+    "@google-cloud/storage": "^7.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
