--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.817.0",
+    "@elevenlabs/elevenlabs-js": "^2.1.0",
     "geist": "^1.3.0",
     "mobx-react": "^9.1.1",
     "openai": "^4.28.0"
