Implement feedback: improve icons, mobile UI, prefill demo, small tweaks

--- a/examples/conversational-ai/twitter-linkedin-clone/package.json
+++ b/examples/conversational-ai/twitter-linkedin-clone/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@elevenlabs/client": "^0.2.2",
     "@elevenlabs/react": "^0.1.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
