--- a/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
+++ b/examples/conversational-ai/react-native/elevenlabs-conversational-ai-expo-react-native/package.json
@@ -18,7 +18,9 @@
     "expo-status-bar": "~2.2.3",
     "livekit-client": "^2.15.4",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "expo-battery": "~9.1.4",
+    "expo-brightness": "~13.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
