chore: add @elevenlabs/react dependency to conversational AI example

--- a/examples/conversational-ai/nextjs/package.json
+++ b/examples/conversational-ai/nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@11labs/react": "^0.0.8",
+    "@elevenlabs/react": "^0.5.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
