--- a/examples/conversational-ai/talk-to-santa/package.json
+++ b/examples/conversational-ai/talk-to-santa/package.json
@@ -31,8 +31,8 @@
     "next": "15.0.3",
     "next-safe-action": "^7.9.9",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "19.0.1",
+    "react-dom": "19.0.1",
     "react-snowfall": "^2.2.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
